# MineDigger

./: CMakeLists.txt  MineDigger.conf  README.md
games/MineDiggerDefault/: game.conf
games/MineDiggerDefault/mods/default/: init.lua  mapgen.lua  terrain.lua
games/MineDiggerDefault/mods/default/textures/: Player.xcf  crack_anylength.xcf  heart.xcf
src/: CMakeLists.txt  cavegen.cpp  defaultsettings.cpp  emerge.cpp  map.cpp  subgame.cpp
src/script/lua_api/: l_mapgen.cpp
